(library
 (name pp_extended_test)
 (package pp-extended-tests)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries pp pp_extended)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
